알코올 검색 기능 개선 (#403)
Signed-off-by: hgkim <hgkim@openerd.com>